--- a/index.html
+++ b/index.html
@@ -193,27 +193,27 @@
 												<i class="devicon-ruby-plain-wordmark colored"></i>
 											</div>
 
-											<div>
+											<div class="each-skill">
 												<i class="devicon-rails-plain-wordmark colored"></i>
 											</div>
 
-											<div>
+											<div class="each-skill">
 												<i class="devicon-postgresql-plain-wordmark colored"></i>
 											</div>
 
-											<div>
+											<div class="each-skill">
 												<i class="devicon-javascript-plain colored"></i>
 											</div>
 
-											<div>
+											<div class="each-skill">
 												<i class="devicon-html5-plain-wordmark colored"></i>
 											</div>
 
-											<div>
+											<div class="each-skill">
 												<i class="devicon-css3-plain-wordmark colored"></i>
 											</div>
 
-											<div>
+											<div class="each-skill">
 												<i class="devicon-amazonwebservices-plain-wordmark colored"></i>
 											</div>
 
